# operating-systems

./: .gitignore
lab1/: task.txt
lab1/zad1/: makefile
lab1/zad1/lib/: contact.h  libcontact.c  libcontact.h  liblist.c  liblist.h
lab1/zad1/src/: main.c
lab1/zad2/: data.csv  main  makefile
lab1/zad2/lib/: contact.c  contact.h  contactList.c  contactTree.c  libcontact.c  libcontact.h
lab1/zad2/mainsrc/: main.c
lab1/zad2/src/: benchmark.c  main.c  measureTime.c  measureTime.h
lab1/zad3/: benchmark  makefile
lab1/zad3/src/: benchmark.c
lab1/zad3a/: data.csv  makefile  measurement.sh  results.txt
lab1/zad3a/lib/: contact.c  contactBook.h  contactList.c  contactList.h  contactTree.h
lab1/zad3a/src/: measureTime.c  measureTime.h
lab1/zad3b/: makefile  measurement.sh  results.txt
lab1/zad3b/src/: benchmark.c  measureTime.c
lab1/zad4/: gdb.txt  makefile
lab1/zad4/lib/: contactTree.c
lab1/zad4/src/: benchmark.c
lab11/: CMakeLists.txt  client.c  server.c  task.txt
lab2/: task.txt  useful.txt
lab2/zad1/: benchmark.c  makefile  measure.sh  wyniki.txt
lab2/zad1/lib/: argParser.c  argParser.h  fileOperations.c  fileOperations.h  ioBenchmark.h
lab2/zad3/: makefile  test.txt
lab3/: task.txt
lab3/zad1/: test.txt
lab3/zad2/: makefile  test.txt
lab4/: task.txt
lab4/zad1/: makefile
lab4/zad3/: killer.sh  makefile
lab5/: task.txt
lab5/zad1/: makefile
lab5/zad2/: makefile
lab6/: task.txt
lab6/zad1/: anton.sh  client  makefile  server
lab6/zad2/: makefile
lab7/: makefile  task.txt
lab7/zad1/: CMakeLists.txt  Makefile  makefile
lab7/zad1/src/: barber.c  common.h  commons.h  kamino.c
lab7/zad1/src/lib/: makefile  pidQueue.c  pidQueue.h  utils.c  utils.h
lab7/zad2/: CMakeLists.txt  Makefile
lab8/zad1/: CMakeLists.txt
lab8/zad1/resources/: lyrics.txt
lab8/zad1/src/: common.h  generator.c  utils.h  zad1a.c  zad1b.c  zad1c.c
lab8/zad2/: CMakeLists.txt  zad2.raport
lab8/zad2/src/: zad2a.c  zad2b.c
lab9/: task.txt
lab9/zada/: CMakeLists.txt
lab9/zadb/: CMakeLists.txt
(+54 files in other folders)
